# woodshop

./: .gitignore  CMakeLists.txt  CMakePresets.json  Cargo.toml  README.md  package.json  pnpm-workspace.yaml  turbo.json
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: artifacts-e2e.yml  build-test.yml  codeql.yml  deps-gate.yml  mcp-e2e.yml  security.yml
apps/agent-pack/: package.json
apps/agent-pack/prompts/: system.md
apps/desktop/: CMakeLists.txt  CMakePresets.json
apps/desktop/assets/: LICENSE.txt  woodshop.desktop
apps/desktop/qml/: Main.qml  qml.qrc
apps/desktop/qml/components/: ActionCard.qml  ConsentPrompt.qml  OfflineBanner.qml  README.md  ReactTraceView.qml  StatusBadge.qml  ToolChip.qml
apps/desktop/qml/views/: ChatPane.qml  ViewerPane.qml
apps/desktop/src/: main.cpp
apps/desktop/src/app/: AppController.cpp  AppController.h
apps/desktop/src/models/: ActionCardModel.cpp  ActionCardModel.h  ChatModel.cpp  ChatModel.h  RevisionModel.cpp  RevisionModel.h
apps/desktop/src/services/: ConsentState.h  McpSession.cpp  McpSession.h  OcctViewerBridge.cpp  OcctViewerBridge.h  OfflineCache.cpp  OfflineCache.h
apps/desktop/tests/: CMakeLists.txt  tst_chatmodel.cpp
apps/mcp-server/: package.json  tsconfig.json
apps/mcp-server/src/: index.ts  registry.ts
apps/mcp-server/test/: contracts.test.js  nest.test.js  provenance.test.js  tools_extended.test.js
apps/web-viewer/: index.html  package.json  tsconfig.json  vite.config.ts
apps/web-viewer/src/: main.tsx
artifacts/demo/: cutlist.json  layout.dxf  nest_summary.json  wood_movement_report.json
artifacts/gcode/proj_cabinet_7741/: cabinet_rev0003.nc
ci/scripts/: diff-artifacts.js
ci/scripts/__tests__/: diff-artifacts.test.js
ci/security/: README.md  generate-sbom.sh  gitleaks.toml  run-secret-scan.sh
codex/: index-tasklist.md  project_overview.md
codex/agent-pack/catalogs/: woodshop-openrpc.json  woodshop-tools.json
codex/agent-pack/docs/: playbooks.md
codex/agent-pack/evals/: README.md  runner.ts
codex/agent-pack/prompts/: developer.md  system.md
codex/build_recipes/: ci-pipelines.md  docker-images.md  mcp-server-dev.md  native-occt-cmake.md  reproducible-builds-and-seeds.md  rust-workspace.md  ts-monorepo-pnpm.md  wasm-occt-emscripten.md  web-viewer-wasm-bundling.md
codex/conventions/: code-review-and-prs.md  coding-cpp-occt.md  coding-rust.md  coding-typescript.md  commit-style-and-semver.md  determinism-and-provenance.md  docs-and-adr.md  errors-logging-and-telemetry.md  performance-budgets.md  security-and-secrets.md  testing-strategy.md
codex/prompts/: autonomous-codex.md  benchmark-and-profile.md  bug-triage-and-fix.md  doc-generation.md  e2e-through-mcp.md  implement-feature.md  migration-and-changesets.md  pr-review.md  refactor-codemod.md  test-generation.md
codex/task_checklists/: 00-readme.md  artifacts-and-goldens.md  cam.md  ci-and-quality.md  desktop-app.md  mcp-server.md  nest.md  occt-core.md  release-and-versioning.md  schemas-and-types.md  security-and-compliance.md  ui-kit.md  web-viewer.md
codex/tasks/epics/: 00-foundations-and-repo-health.md  01-occt-core-geometry-and-io.md  02-wasm-viewer-and-occt-bindings.md  (+12 more)
docs/issues/: 0001-emsdk-setup.md
docs/project-management/: delivery-roadmap.md  hotfix-log.md  playbook-summary.md  playbook.md  risks.md  stage-gate-agenda.md
docs/security/: dependency-governance.md  secret-policies.md
docs/todo/: artifacts-byte-stability-and-seeds.yaml  artifacts-ci-e2e-workflow.yaml  artifacts-diff-tool-and-report.yaml  artifacts-reference-projects-setup.yaml  cam-contour-operation.yaml  cam-drill-operation.yaml  cam-gcode-conformance-smoke.yaml  cam-gcode-writer-rs274-blocks.yaml  cam-grbl-post-writer.yaml  cam-linking-leads-ramps-safez.yaml  cam-pocket-operation.yaml  cam-simulator-dryrun-collisions.yaml  cam-tabs-and-holddowns.yaml  ci-build-matrix-native-wasm-rust-ts.yaml  ci-cache-strategy-pnpm-cargo-cmake.yaml  ci-required-checks-and-statuses.yaml  desktop-action-cards-and-artifacts.yaml  desktop-chat-pane-and-react-trace.yaml  desktop-offline-cache-and-retry.yaml  desktop-packaging-installers.yaml  desktop-undo-redo-revisions.yaml  desktop-viewer-bridge-occt.yaml  docs-adrs-bootstrap-and-style.yaml  docs-project-overview-sync.yaml  mcp-error-mapping-and-codes.yaml  mcp-provenance-logging-seed-coreversion.yaml  mcp-registry-and-discovery.yaml  mcp-schema-validation-middleware.yaml  mcp-tool-apply-joinery.yaml  mcp-tool-create-project.yaml  mcp-tool-extract-cutlist.yaml  mcp-tool-generate-toolpaths.yaml  mcp-tool-make-drawing.yaml  mcp-tool-nest-parts.yaml  mcp-tool-param-update.yaml  mcp-tool-postprocess-grbl.yaml  mcp-tool-wood-movement-check.yaml  nest-benchmarks-and-thresholds.yaml  nest-best-fit-sheets.yaml  nest-first-fit-boards.yaml  (+29 more)
engines/cam/: Cargo.toml
engines/nest/: Cargo.toml
engines/occt-core/: CMakeLists.txt  CMakePresets.json
engines/occt-core/cmake/toolchains/: Emscripten.cmake
engines/occt-core/include/woodshop/geom/: Tessellate.hpp
engines/occt-core/include/woodshop/io/: IgesIo.hpp  StepIo.hpp
engines/occt-core/src/: placeholder.cpp
engines/occt-core/src/bindings/: embind.cpp
engines/occt-core/src/geom/: Tessellate.cpp
engines/occt-core/src/io/: IgesIo.cpp  StepIo.cpp
engines/occt-core/tests/: fuzz_boolean.cpp  iges_smoke.cpp  mesh_ops.cpp  step_roundtrip.cpp
tools/cam/: run-demo.mjs
tools/codegen/: generate-schema-types.mjs
tools/e2e/: run-mcp-artifacts.mjs  run-mcp-demo.mjs
tools/openrpc/: generate-openrpc.mjs
tools/scripts/: print-registry.mjs
tools/sim/: render_gcode.py
(+241 files in other folders)
